Revision history for Graphics-Primitive

0.09
  - Path: add arc, close_path
  - Path: rename get_primitive_at to get_primitive
  - Path: clone points rather than using them, they tend to change
  - Path: don't inherit or implement anything out of Geo::Primitive, it's
    not necessary
  - Canvas: update path proxy methods
  - Make everything cloneable

0.08
  - Path: default starting point to 0,0
  - Rename Graphics::Primitive::Stroke to Graphics::Primitive::Brush
  - Brush: Add Color
  - Add Canvas calls to Driver
  - Add Operation::Fill and Operation::Stroke
  - Lots of POD
  - Add Paint and children

0.07
  - Remove do_prepare
  - Add disclaimer
  - Add lines to Textbox and chop up input, this is likely temporary
  - Add optional layout manager to container
  - prepare now expects the driver to be passed in
  - Component's prepare sets minimum sizes to the outside ones
  - Return default font size from coderef
  - Use isa to check component classes and put container at the bottom
    so that the parent container is drawn before it's children.
  - Add get_tree method to component for visualizing the entire component
  - Prepare children before parents
  - Don't return inside_height or width < 0
  - Default Component::prepare to setting a minimum height/width based on
    outside values
  - Add Component::to_string
  - Let Container's layout_manager handle do_layout
  - Add 'pack' to the plan...
  - Path: modify line_to and move_to to accept scalars
  - Stroke: add dash_pattern

0.06
  - Add Driver
  - Set default border width to 0
  - Move component management out of LM and into Container
  - Move stuff from LM::Component role into Component
  - Remove LM dependency
  - Add Textbox
  - Change Component's inside_bounding_box origin to be a relative value

0.05
  - Don't prepare or draw invisible components in Containers

0.04
  - POD fixes
  - Add find_component and get_component as proxies in Container

0.03